# image-viewer

./: CMakeLists.txt  LICENCE  README.md  image_viewer  image_viewer_utils.c  image_viewer_utils.h  main.c  netpbm_utils.c  netpbm_utils.h
test-images/: P5File.pgm  black-white.ppm
